tests/NormalTests/paczka1/fuzzy1/56764357.err
Error in line 9: vmTvZCjP2Hr S418 427,3
Error in line 31: tBDioV2CGg S418 57,7
